# Ukoly2024

./: .gitignore  README.md  Ukol3  ahoj.txt  devcontainer.json  linked_list.cpp  sifry.cpp
.devcontainer/: devcontainer.json
.github/workflows/: presmerovani.yml  testCpp.yml  testPython.yml  testUkol0.yml  testUkol1.yml  testUkol2.yml  testUkol3.yml  testUkol4.yml  testUkol6.yml  testUkol7.yml  testUkol8.yml  testUkol9.yml  tests.yml
Ukol_0/cpp/: CMakeLists.txt  hello_world.cpp  test.cpp
Ukol_0/python/: HellWorldUPDATE.py  hello_world.py  test.py
Ukol_1/cpp/: CMakeLists.txt  test.cpp  vypocty.cpp
Ukol_1/python/: PYvypoctyUPDATE.py  test.py  vypocty.py
Ukol_1_Almasi/: README.md
Ukol_1_Almasi/cpp/: vypocty.cpp
Ukol_1_Almasi/python/: vypocty.py
Ukol_1_BilekDaniel/cpp/: vypocty  vypocty.cpp
Ukol_1_BilekDaniel/python/: vypocty.py
Ukol_2/: README.md
Ukol_2/cpp/: CMakeLists.txt  moje.cpp  sifrovany_caesar.txt  sifrovany_vigener.txt  sifrovany_xor.txt  sifry  sifry.cpp  sifry_done.cpp  test.cpp  ukol_2_Frajt.cpp  vstup.txt
Ukol_2/cpp/sifry.dSYM/Contents/: Info.plist
Ukol_2/cpp/sifry.dSYM/Contents/Resources/DWARF/: sifry
Ukol_2/cpp/sifry.dSYM/Contents/Resources/Relocations/x86_64/: sifry.yml
Ukol_3/: Hájková-úkol3  README.md  bbb
Ukol_3/LinkedListApp/: LinkedListApp.sln
Ukol_3/LinkedListApp/LinkedListApp/: LinkedListApp.cpp  LinkedListApp.vcxproj  LinkedListApp.vcxproj.filters
Ukol_3/LinkedListApp/LinkedListApp/x64/Debug/: LinkedListApp.exe.recipe
Ukol_3/LinkedListApp/LinkedListTests/: LinkedListTests.vcxproj
Ukol_3/cpp/: CMakeLists.txt  Clinked_listUpdate.cpp  linked_list.cpp  linked_list_Frajt.cpp  main.cpp  test.cpp  ukol3_KamilaMilarova.cpp
Ukol_4/: README.md
Ukol_4/cpp/: CMakeLists.txt  advent_lod.cpp  test.cpp  vstup_1.txt  vstup_2.txt  vstup_3.txt
Ukol_5/: Bylozravec.cpp  Masozravec.cpp  Prostredi.cpp  README.md  Rostlina.h  Ukol_5.vcxproj  Zvire.h  rostlina.cpp  source.cpp
Ukol_5/cpp/: Bylozravec.cpp  Bylozravec.h  CMakeLists.txt  Masozravec.cpp  Masozravec.h  Organismus.cpp  Organismus.h  Prostredi.cpp  Prostredi.h  Rostlina.cpp  Rostlina.h  Ukol_5.vcxproj.filters  Zvire.cpp  Zvire.h  bylozravec.cpp  bylozravec.h  bylozravec.hpp  main.cpp  masozravec.cpp  masozravec.h  masozravec.hpp  organismus.cpp  organismus.h  organismus.hpp  organisumus.cpp  prostredi.cpp  prostredi.h  prostredi.hpp  prostredi_impl.h  rostlina.cpp  rostlina.h  rostlina.hpp  source.cpp  zivocich.cpp  zivocich.h  zvire.cpp  zvire.h  zvire.hpp
Ukol_6/: README.md
Ukol_6/cpp/: CMakeLists.txt  hanoi.cpp  test.cpp
Ukol_7/: README.md
Ukol_7/python/: matice.py  test.py
Ukol_8/: README.md
Ukol_8/python/: matice.py  moje.py  test.py
Ukol_9/: README.md
Ukol_9/python/: knihovna.csv  main.py  test.py
Ukol_9/python/SystemKnihovny/: Ctenar.py  Kniha.py  Knihovna.py  __init__.py
