cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled
        prostredi.cpp
        prostredi.h
        bylozravec.cpp
        bylozravec.h
        masozravec.cpp
        masozravec.h
        organismus.cpp
        organismus.h
        rostlina.cpp
        rostlina.h
        zvire.cpp
        zvire.h
        source.cpp)
