cmake_minimum_required(VERSION 3.29)
project(ukol5)

set(CMAKE_CXX_STANDARD 20)

add_executable(ukol5
        Ukol_5/cpp/source.cpp
        Ukol_5/cpp/zvire.cpp
        Ukol_5/cpp/bylozravec.cpp
        Ukol_5/cpp/masozravec.cpp
        Ukol_5/cpp/prostredi.cpp
        Ukol_5/cpp/zvire.cpp
        Ukol_5/cpp/organismus.cpp
        Ukol_5/cpp/rostlina.cpp
        Ukol_5/cpp/rostlina.cpp
)
